ajout des modifications + interface du workshop

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -140,15 +140,62 @@
         android:textColor="@color/black"
         android:gravity="center"
         android:textSize="20sp"/>
-    <TextView
-        android:id="@+id/crono"
-        android:layout_marginTop="15dp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="00:00:00"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:textSize="50sp"/>
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/crono1"
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="60sp"/>
+        <TextView
+            android:id="@+id/crono2"
+            android:layout_marginTop="11dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="65sp"/>
+        <TextView
+            android:id="@+id/crono3"
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="60sp"/>
+        <TextView
+            android:id="@+id/crono4"
+            android:layout_marginTop="11dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="65sp"/>
+        <TextView
+            android:id="@+id/crono5"
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="60sp"/>
+
+
+
+    </LinearLayout>
+
 
     <View
         android:layout_width="match_parent"
@@ -182,7 +229,7 @@
             android:layout_height="40dp"
             android:background="@color/gray"
             android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginRight="65dp"
 
             />
         <ImageView
@@ -223,9 +270,9 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:layout_marginLeft="20dp"
-                android:gravity="center_vertical">
+                android:layout_marginTop="26dp"
+                android:layout_marginLeft="22dp"
+                android:gravity="center">
 
                 <View
                     android:layout_width="25dp"
