--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="white">#FFFFFF</color>
+    <color name="vert">#009052</color>
+    <color name="rouge">#E20832</color>
+    <color name="white">#FEFEFE</color>
     <color name="gray">#D4D4D4</color>
     <color name="gray2">#AAB2B8</color>
     <color name="gray3">#F0F0F0</color>
